fix jerky scrolling on Safari

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -5,6 +5,11 @@ body {
   line-height: 1.3;
   color: var(--body-text-color);
   background: var(--body-bg);
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
 }
 
 #svelte {
@@ -12,21 +17,30 @@ body {
   flex-direction: column;
 }
 
-main {
-  overflow-x: hidden;
+.container {
   overflow-y: auto;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
+  position: absolute;
+  top: 72px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  will-change: transform; /* avoids "repaint on scroll" in Chrome */
+}
+
+main {
   position: relative;
   max-width: 600px;
   padding: 15px 15px;
   box-sizing: border-box;
-  margin: 85px auto 15px;
+  margin: 15px auto 15px;
   background: var(--main-bg);
   border: 1px solid var(--main-border);
   border-radius: 1px;
   @media (max-width: 767px) {
     padding: 5px 5px;
-    margin: 75px auto 15px;
+    margin: 5px auto 15px;
   }
 }
 
